deploy gh pages

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.3.2",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,8 +25,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://sandjai.github.io/dreamdiary/",
   "eslintConfig": {
     "extends": [
       "react-app",
